--- a/src/css/ListTodo.scss
+++ b/src/css/ListTodo.scss
@@ -6,6 +6,17 @@
       height: 580px;
       overflow-y: scroll;
       padding: 0 20px 0 0;
+      &::-webkit-scrollbar {
+        background-color: #eaf6f3;
+      }
+      &::-webkit-scrollbar-thumb {
+        background-color: #ccc;
+        border-radius: 10px;
+        border: 2px solid #eaf6f3;
+      }
+      &::-webkit-scrollbar-track {
+        background-color: #eaf6f3;
+      }
       li {
         padding: 17px 20px 0;
         background: #fff;
